# scraper

./: .gitignore  README.md  config.py  config.yaml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  swagger.yml  wsgi.py
crawl/: __init__.py  check.py  dot__init__.py  driver.py  heartbeat.py  oddsportal-com-chain.pem  oddsportal-com.pem  parse.py  places.py  sandbox.py  scrape.py  seo.py
crawl/templates/: example.html  index.html
