[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Andrii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
pyyaml = "^6.0.2"
cloudscraper = "^1.2.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
